test/src/e2e_vm_tests/test_programs/should_fail/const_eval_bad_struct_with_return/src/main.sw
library;

struct MyStruct {
    x: u64
}

// OK
const A: MyStruct = MyStruct {
    x: {
        1
    }
};

// NOK
const B: MyStruct = MyStruct {
    x: {
        return 1;
        1
    }
};
